@@ -14,7 +14,7 @@
   <!-- prefixed with "env". -->
   <property environment="env"/>
 
-  <property name="version" value="1.2alpha7"/>
+  <property name="version" value="1.2alpha8"/>
   
   <!-- The base directory relative to which most targets are built -->
   <property name="base" value="."/>
