@@ -9,6 +9,14 @@
  
  - Release of version 1.2 (ALPHA)
 
+ (alpha8)
+
+ - Log4j 1.2 is now backward compatible in serialization of
+   LoggingEvents. For example, a 1.1.3 SocketAppedner can write to 1.2
+   SocketServer. Similarly a 1.2 JMSAppender will work with 1.1.3
+   JMSSink. This should ease the move to log4j 1.2, especially in
+   large deployments. [*]
+
  (alpha7)
 
  - The src/java/org/apache/log4j/examples/ directory moved under the
